ajout pages admin

--- a/panel_admin_laravel/laravel/public/css/style.scss
+++ b/panel_admin_laravel/laravel/public/css/style.scss
@@ -1,4 +1,4 @@
-@import 'header', 'index', 'login';
+@import 'header', 'index', 'profile';
 
 // Colors :
 $black : #212529;
@@ -24,7 +24,6 @@ body {
 
         width: 1700px;
         max-width: 100%;
-        margin-left: 300px;
 
     }
 
