--- a/panel_admin_laravel/laravel/public/css/style.css
+++ b/panel_admin_laravel/laravel/public/css/style.css
@@ -138,6 +138,29 @@ header nav ul li .signout:hover {
   padding: 10px;
 }
 
+h1 {
+  margin: 20px;
+}
+
+#profile {
+  border: solid 1px black;
+  border-radius: 5px;
+  display: inline-block;
+  padding: 10px;
+  margin: 20px;
+}
+
+#profile #user_table {
+  margin-left: 20px;
+}
+
+#profile #user_table tr td {
+  padding: 10px;
+  margin: -5px;
+  width: 300px;
+  border: solid 1px gray;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -157,6 +180,5 @@ body {
 body main {
   width: 1700px;
   max-width: 100%;
-  margin-left: 300px;
 }
 /*# sourceMappingURL=style.css.map */
