ajout vue formulaire de modification des données de l'utilisateurs et correction de bug sur la vue admin dashboard

--- a/panel_admin_laravel/laravel/public/css/_index.scss
+++ b/panel_admin_laravel/laravel/public/css/_index.scss
@@ -64,6 +64,20 @@
 
     }
 
+    #profile {
+
+        form {
+
+            input {
+
+                display: block;
+
+            }
+
+        }
+
+    }
+
     .box_content {
 
         display: flex;
