Ajout de la fonctionnalité modification des informations utilisateur pour l'admin

--- a/panel_admin_laravel/laravel/public/css/_index.scss
+++ b/panel_admin_laravel/laravel/public/css/_index.scss
@@ -64,6 +64,16 @@
 
     }
 
+    #user_table {
+
+        tr {
+
+            border: solid 1px black;
+
+        }
+
+    }
+
     #profile {
 
         form {
